# hackathon-freezerdata

./: README.md  features.md  pyproject.toml
data/: readme.md
data/Data Errors/Condensor blocked/: 04_04_2025_PLC.csv  11_04_2025_PLC.csv  28_03_2025_PLC.csv
data/Data Errors/Evaporator blocked/: 04_06_2025_PLC.csv  05_06_2025_PLC.csv  20_05_2025_PLC.csv
data/Data Normal/: 02_05_2023-07_05_2025_freezerdata.csv  04_04_2025-07_04_2025_PLC.csv  11_04_2025-14_04_2025_PLC.csv  27_03_2025-31_03_2025_PLC.csv
data/Data Setpoints/: 22_05_2023-23_05_2023_PLC.csv  22_05_2023-23_05_2023_PLC.csv:Zone.Identifier  22_05_2023-23_05_2023_freezerdata.csv  22_05_2023-23_05_2023_merged.csv
eda/: setpoint_eda.ipynb
